# text-classifier

./: .dockerignore  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-deps.sh  config.yaml  install.sh  models_config.txt  models_config.yaml  qclassif_api.py
fastText/: compile.bash
include/: abstract_server.h  classifier.h  classifier_controller.h  grpc_route_classify_impl.h  grpc_server.h  qclass_api.h  qclass_server.h  qclassifier.h  qtokenizer.h  rest_server.h  tokenizer.h  utils.h
include/katanoisi/: classifier.h  qclassifier.h  rest_server.h  tokenizer.h  utils.h
libTokenizer/: CMakeLists.txt  cbuild.sh  compile.bash
libTokenizer/src/: qtokenizer.cpp
protos/: grpc_classification.proto
src/: abstract_server.cpp  api_classification.cpp  classifier.cpp  classifier_controller.cpp  grpc_route_classify_impl.cpp  grpc_server.cpp  katanoisi.cpp  katanoisi_server.cpp  main_api.cpp  main_server.cpp  qclass_api.cpp  qclass_server.cpp  qclassifier.cpp  qtokenizer.cpp  rest_server.cpp  test.cpp  text-classifier.cpp  tokenizer.cpp  utils.cpp
tests/: generate_python_files_from_proto.sh  models_config.yaml  test.cpp  test_grpc.py  tests.cpp  tests_classifier.cpp  tests_classifier_controller.cpp  tests_grpc_route_classify_impl.cpp  tests_rest_server.cpp  tests_tokenizer.cpp
